* added review committee on the title page * marginpar in flowy-map-reduce * marginpar in flowy 2.0 and f(v1)

--- a/frontback/titlepage.tex
+++ b/frontback/titlepage.tex
@@ -13,14 +13,16 @@
 				\vfill
         \Large\underline{\myDegree} \\ \bigskip
 				\vfill
-				\small{supervised by} \\
-				\Large{\myProf} \\ \vfill
+				\small{reviewed by} \\ \\
+				\Large{\myProf} \\
+				\Large{\myOtherProf} \\ \vfill
+
 				\large\myFaculty \\
-        \myDepartment \\                            
-        \myUni \\ 
+        \myDepartment \\
+        \myUni \\
 				\myLocation \\ \bigskip
 				\vfill
 				\Large\myTime
-    \end{center}  
-  \end{addmargin}       
-\end{titlepage}   
+    \end{center}
+  \end{addmargin}
+\end{titlepage}
