* combined flowy 2.0 and f(v1) chapters * faster grouping approach in f(v1) * function grouping in f(v2)

--- a/vbajpai-thesis.tex
+++ b/vbajpai-thesis.tex
@@ -34,7 +34,7 @@
 \include{chapters/state-of-the-art/flowy}
 \include{chapters/state-of-the-art/flowy-mapreduce}
 \include{chapters/state-of-the-art/flowy-2}
-\include{chapters/state-of-the-art/f}
+%\include{chapters/state-of-the-art/f}
 \include{chapters/state-of-the-art/flowy-applications}
 
 % \cleardoublepage
