* state of the art blurb * declaration * colophon * acknowledgements * publications

--- a/frontback/acknowledgments.tex
+++ b/frontback/acknowledgments.tex
@@ -1,14 +1,10 @@
 \pdfbookmark[1]{Acknowledgments}{acknowledgments}
 
-\begin{flushright}{\slshape    
-    We have seen that computer programming is an art, \\ 
-    because it applies accumulated knowledge to the world, \\ 
-    because it requires skill and ingenuity, and especially \\
-    because it produces objects of beauty.} \\ \medskip
-    --- \defcitealias{knuth:1974}{Donald E. Knuth}\citetalias{knuth:1974} \citep{knuth:1974}
+\begin{flushright}{\slshape
+    Programs must be written for people to read, \\
+    and only incidentally for machines to execute.} \\ \medskip
+    --- H. Abelson and G. Sussman
 \end{flushright}
-
-
 
 \bigskip
 
@@ -17,9 +13,5 @@
 \let\cleardoublepage\relax
 \let\cleardoublepage\relax
 \chapter*{Acknowledgments}
-Put your acknowledgments here.
-
+\ldots
 \endgroup
-
-
-
