--- a/frontback/contents.tex
+++ b/frontback/contents.tex
@@ -15,8 +15,8 @@
 %*******************************************************
 % List of Figures and of the Tables
 %*******************************************************
-% \clearpage
-% \vspace{90pt}
+\clearpage
+\vspace{90pt}
 
 \begingroup
     \let\clearpage\relax
@@ -44,6 +44,9 @@
     %\addcontentsline{toc}{chapter}{\listtablename}
     \pdfbookmark[1]{\listtablename}{lot}
     \listoftables
+
+    %\vspace*{8ex}
+    %\newpage
 
     %\vspace*{8ex}
     %\newpage
