--- a/frontback/declaration.tex
+++ b/frontback/declaration.tex
@@ -5,9 +5,14 @@
 \pdfbookmark[0]{Declaration}{declaration}
 \chapter*{Declaration}
 \thispagestyle{empty}
-Put your declaration here.
+
+I hereby declare that this thesis is the result of my independent work, has
+not been previously accepted in substance for any degree and is not
+concurrently submitted for any degree.  This thesis is being submitted in
+fulfillment of the requirements for the degree of Master of Science in
+Computer Science.
+
 \bigskip
- 
 \noindent\textit{\myLocation, \myTime}
 
 \smallskip
