--- a/vbajpai-thesis.tex
+++ b/vbajpai-thesis.tex
@@ -19,6 +19,8 @@
 
 \include{frontback/titlepage}
 \cleardoublepage
+\include{frontback/dedication}
+\cleardoublepage
 \include{frontback/abstract}
 \cleardoublepage
 \include{frontback/publication}
