--- a/frontback/acknowledgments.tex
+++ b/frontback/acknowledgments.tex
@@ -13,5 +13,13 @@
 \let\cleardoublepage\relax
 \let\cleardoublepage\relax
 \chapter*{Acknowledgments}
-\ldots
+
+I would like to express my gratitude to my supervisor Prof. Dr. J\"urgen
+Sc\"onw\"alder for providing me constant feedback and support throughout the
+entire duration of my masters thesis.
+
+I would also like to thank my mother for her blessings and personal support
+and my brother Dr. Gaurav Bajpai for providing me continuous encouragement and
+for proof-reading my thesis. \\
+
 \endgroup
