corrections:   * abstract   * design   * implementation   * future work and conclusion   * appendix

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -41,11 +41,19 @@
  year = {2012},
 }
 
-@unpublished{vbajpai:2012,
- author = {Bajpai, Vaibhav and Melnikov, Nikolay and
-		   		 Sch\"{o}nw\"{a}lder, J\"{u}rgen},
- title = {{Automated Failure Identification under IPv6 Transition Mechanisms}},
- year = {2012},
+@incollection{vbajpai:2012,
+  year={2012},
+  isbn={978-3-642-30632-7},
+  booktitle={Dependable Networks and Services},
+  volume={7279},
+  series={Lecture Notes in Computer Science},
+  doi={10.1007/978-3-642-30633-4_19},
+  title={{Flow-Based Identification of Failures Caused by IPv6 Transition Mechanisms}},
+  url={http://dx.doi.org/10.1007/978-3-642-30633-4_19},
+  publisher={Springer Berlin Heidelberg},
+  keywords={IPv6; Transition; NAT64; Dual-Stack Lite; NetFlow},
+  author={Bajpai, Vaibhav and Melnikov, Nikolay and Sehgal, Anuj and Sch\"onw\"alder, J\"urgen},
+  pages={139-150}
 }
 
 @article{btrammell:2011,
@@ -487,6 +495,17 @@ ISSN={},
  address = {Berlin, Heidelberg},
  keywords = {IPFIX, NetFlow, Network measurement},
 }
+
+
+@book{masteringcmake:2008,
+ author = {Martin, Ken and Hoffman, Bill},
+ title = {{Mastering CMake 4th Edition}},
+ year = {2008},
+ isbn = {1930934203, 9781930934207},
+ edition = {4th},
+ publisher = {Kitware, Inc.},
+ address = {USA},
+} 
 
 @misc{rfc5246,
   author="T. Dierks and E. Rescorla",
