chapter: design   * flowquery composition using DNF expression   * writing results as flowtools files   * adaptable compression levels

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -961,6 +961,19 @@ ISSN={1542-1201},
 	 						   Engine [http://citeseerx.ist.psu.edu/oai2] (United States)},
 }
 
+@misc{rfc1950,
+  author="P. Deutsch and J-L. Gailly",
+  title="{ZLIB Compressed Data Format Specification version 3.3}",
+  series="Request for Comments",
+  number="1950",
+  howpublished="RFC 1950 (Informational)",
+  publisher="IETF",
+  organization="Internet Engineering Task Force",
+  year=1996,
+  month=may,
+    url="http://www.ietf.org/rfc/rfc1950.txt",
+}
+
 @article{vvapnik:1995,
    author = {Cortes, Corinna and Vapnik, Vladimir},
    title = {{Support-Vector Networks}},
