future work   * mmap the tracefile   * multithreaded filtering   * parallelizing grouper qsort   * lzo compression support   * inline group filter   * dynamically choosing an appropriate grouping approach   * extensive regression test suite

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1052,3 +1052,22 @@ ISSN={1542-1201},
  address = {New York, NY, USA},
  keywords = {interval reasoning, interval representation, temporal interval},
 }
+
+@article{graham:1982,
+ author = {Graham, Susan L. and Kessler, Peter B. and Mckusick, Marshall K.},
+ title = {Gprof: A call graph execution profiler},
+ journal = {SIGPLAN Not.},
+ issue_date = {June 1982},
+ volume = {17},
+ number = {6},
+ month = jun,
+ year = {1982},
+ issn = {0362-1340},
+ pages = {120--126},
+ numpages = {7},
+ url = {http://doi.acm.org/10.1145/872726.806987},
+ doi = {10.1145/872726.806987},
+ acmid = {806987},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+}
