--- a/frontback/abstract.tex
+++ b/frontback/abstract.tex
@@ -36,18 +36,18 @@ non-existent. The flowquery used by the execution engine to mine the traces
 is also hardcoded in pipeline structs. \\
 
 This thesis extends $F(v1)$ to provide a complete usable implementation of
-\ac{NFQL} with \emph{functional} pipeline stages. The execution engine has been
-completely refactored with a maintainable design and profiled to eliminate any
-memory leaks. The stages are \emph{robust} to work well with variety of
-\ac{NFQL} queries. The flowqueries are no longer hardcoded in the pipeline
-structs, but rather the engine is \emph{flexible} enough to read and parse them
-at runtime using the \texttt{JSON} intermediate format. $F(v2)$ is also
-\emph{portable} with automated builds using \texttt{cmake} and is
-\emph{verifiable} using a full-fledged regression test-suite. An automated
-benchmarking suite enables the conducted performance evaluations to be
-repeatable. The conducted performance evaluations reveal that $F(v2)$ can
-process flow traces with millions of records in matter of minutes, making it
-comparable to the contemporary flow processing tools.
+\ac{NFQL} with \emph{functional} pipeline stages. The engine is \emph{robust}
+to work well with variety of \ac{NFQL} queries that are now read and parsed at
+runtime using the \texttt{JSON} intermediate format. The filter and grouper
+implementations have also been reimagined to bring forth an orders of
+magnitude performance speedup. $F(v2)$ is \emph{portable} with automated
+builds using \texttt{cmake} and is \emph{verifiable} using a regression
+test-suite framework. An automated benchmarking suite enables the conducted
+performance evaluations to be repeatable. The conducted performance
+evaluations reveal that $F(v2)$ can now process flow traces with millions of
+records in matter of minutes, which used to take days in F$(v1)$. Such a
+performance boost makes $F(v2)$ comparable to contemporary flow-processing
+tools.
 
 %However, this has disconnected the flow-query parser present
 %in the former implementation. The two implementations have now branched off so
