--- a/thesis-preamble.sty
+++ b/thesis-preamble.sty
@@ -20,9 +20,8 @@
 \newcommand{\myDepartment}{School of Engineering and Science\xspace}
 \newcommand{\myUni}{\protect{Jacobs University Bremen}\xspace}
 \newcommand{\myLocation}{Bremen, Germany\xspace}
-\newcommand{\myTime}{\monthname \xspace $2012$ \xspace}
+\newcommand{\myTime}{\monthname \xspace $\onlydate\today$, \xspace $2012$ \xspace}
 \newcommand{\myVersion}{Version 1.0\xspace}
-
 
 % ********************************************************************
 % Configure thesis for your needs here...
