--- a/thesis.sty
+++ b/thesis.sty
@@ -6,8 +6,8 @@
     \newboolean{@drafting} % print version information on pages
     \newboolean{@linedheaders} % chaper headers will have line above and beneath
     \newboolean{@listsseparated} % toggles the vertical space between lof/lot entries of different chapters
-    \newboolean{@nochapters} % disable all chapter-specific commands 
-    \newboolean{@beramono} % toggle nice monospaced font (w/ bold) + pre-installed 
+    \newboolean{@nochapters} % disable all chapter-specific commands
+    \newboolean{@beramono} % toggle nice monospaced font (w/ bold) + pre-installed
     \newboolean{@eulermath} % use awesome Euler fonts for math
     \newboolean{@parts} % use part division for the text
     \newboolean{@minionpro} % setup for minion pro font
@@ -19,10 +19,10 @@
 		\newboolean{@listings} % load listings package (if not already) and setup LoL
 		\newboolean{@manychapters} % additional space in ToC after chapter number (if two digits are needed)
 		\newboolean{@floatperchapter} % additional space in ToC after chapter number (if two digits are needed)
-    
+
 % ********************************************************************
 % Options
-% ******************************************************************** 
+% ********************************************************************
 \DeclareOption{tocaligned}{\setboolean{@tocaligned}{true}}
 \DeclareOption{eulerchapternumbers}{\setboolean{@eulerchapternumbers}{true}}
 \DeclareOption{drafting}{\setboolean{@drafting}{true}}
@@ -34,15 +34,15 @@
     }
 \DeclareOption{subfig}{\setboolean{@subfig}{true}}
 \DeclareOption{nochapters}{\setboolean{@nochapters}{true}}
-\DeclareOption{beramono}{\setboolean{@beramono}{true}} 
-\DeclareOption{eulermath}{\setboolean{@eulermath}{true}} 
-\DeclareOption{parts}{\setboolean{@parts}{true}} 
+\DeclareOption{beramono}{\setboolean{@beramono}{true}}
+\DeclareOption{eulermath}{\setboolean{@eulermath}{true}}
+\DeclareOption{parts}{\setboolean{@parts}{true}}
 \DeclareOption{a5paper}{\setboolean{@a5paper}{true}}
-\DeclareOption{minionpro}{\setboolean{@minionpro}{true}} 
-\DeclareOption{minionprospacing}{\setboolean{@minionprospacing}{true}} 
-\DeclareOption{pdfspacing}{\setboolean{@pdfspacing}{true}} 
-\DeclareOption{pdfspacing}{\setboolean{@pdfspacing}{true}} 
-\DeclareOption{dottedtoc}{\setboolean{@dottedtoc}{true}} 
+\DeclareOption{minionpro}{\setboolean{@minionpro}{true}}
+\DeclareOption{minionprospacing}{\setboolean{@minionprospacing}{true}}
+\DeclareOption{pdfspacing}{\setboolean{@pdfspacing}{true}}
+\DeclareOption{pdfspacing}{\setboolean{@pdfspacing}{true}}
+\DeclareOption{dottedtoc}{\setboolean{@dottedtoc}{true}}
 \DeclareOption{listings}{\setboolean{@listings}{true}}
 \DeclareOption{manychapters}{\setboolean{@manychapters}{true}}
 \DeclareOption{floatperchapter}{\setboolean{@floatperchapter}{true}}
@@ -73,7 +73,7 @@
         \PackageInfo{thesis}{Using option "minionprospacing". %
             This activates "minionpro" in general and turns off %
             the option "pdfspacing".}%
-        % is the user trying to use pdfspacing at the same time?    
+        % is the user trying to use pdfspacing at the same time?
         \ifthenelse{\boolean{@pdfspacing}}%
             {% both minionprospacing and pdfspacing are active
                 \PackageWarningNoLine{thesis}{You cannot use "pdfspacing" at the same time %
@@ -103,7 +103,7 @@
             {% both manychapters and nochapters are active
                 \PackageWarningNoLine{thesis}{You cannot use "floatperchapter" at the same time %
                     as "nochapters"!}%
-            }{\relax}%                      
+            }{\relax}%
         % turn off some things if we do not use chapters
         \PackageInfo{thesis}{Using option "nochapters" (probably for an article). %
                 This turns off the options "linedheaders", "manychapters", "floatperchapter",%
@@ -116,17 +116,17 @@
         \setboolean{@floatperchapter}{false}%
     }{\relax}%
 
-% ********************************************************************                
+% ********************************************************************
 % PDF Stuff
 % ********************************************************************
 \RequirePackage{ifpdf}
 \ifpdf\RequirePackage{hyperref}\fi % for texorpdfstring command below
 
-% ********************************************************************                
+% ********************************************************************
 % Colors
 % ********************************************************************
 \PassOptionsToPackage{dvipsnames}{xcolor}
-	\RequirePackage{xcolor} % [dvipsnames] 
+	\RequirePackage{xcolor} % [dvipsnames]
 \definecolor{halfgray}{gray}{0.55} % chapter numbers will be semi transparent .5 .55 .6 .0
 \definecolor{webgreen}{rgb}{0,.5,0}
 \definecolor{webbrown}{rgb}{.6,0,0}
@@ -136,7 +136,7 @@
 
 % ********************************************************************
 % Font Stuff
-% ********************************************************************   
+% ********************************************************************
 % specialists: MinionPro
 \ifthenelse{\boolean{@minionpro}}%
     {%
@@ -163,7 +163,7 @@
     	\relax%
     	% put your own suitable typewriter font here
     	%\renewcommand{\ttdefault}{\rmdefault}
-    } 
+    }
 \ifthenelse{\boolean{@eulermath}}%
     {\PassOptionsToPackage{euler-digits}{eulervm}%
     	\RequirePackage{eulervm}} % Euler math fonts
@@ -171,7 +171,7 @@
 
 \ifthenelse{\boolean{@eulerchapternumbers}}% font for the chapter numbers
     {\newfont{\chapterNumber}{eurb10 scaled 7000}}%
-    {\newfont{\chapterNumber}{pplr9d scaled 7000}}          
+    {\newfont{\chapterNumber}{pplr9d scaled 7000}}
     % Euler eurb10 / Palatino OSF pplr9d / Palatino SC pplrc9d
     % Latin Modern cork-lmr10 / Minion MinionPro-Regular-osf-t1
     % (MinionPro-SemiboldCapt-osf-t1 MinionPro-SemiboldDisp-osf-t1)
@@ -205,8 +205,8 @@
             \setlength{\marginparsep}{2em}%
         }{% Palatino or other
         		\PackageInfo{thesis}{A4 paper, Palatino or other}
-            \areaset[current]{336pt}{750pt} % ~ 336 * factor 2 + 33 head + 42 \the\footskip 
-%            \areaset{336pt}{761pt} % 686 (factor 2.2) + 33 head + 42 head \the\footskip 10pt     
+            \areaset[current]{336pt}{750pt} % ~ 336 * factor 2 + 33 head + 42 \the\footskip
+%            \areaset{336pt}{761pt} % 686 (factor 2.2) + 33 head + 42 head \the\footskip 10pt
 						\setlength{\marginparwidth}{7em}%
             \setlength{\marginparsep}{2em}%
         }%
@@ -228,7 +228,7 @@
 % Disable single lines at the start of a paragraph (Schusterjungen)
 \clubpenalty = 10000
 % Disable single lines at the end of a paragraph (Hurenkinder)
-\widowpenalty = 10000 
+\widowpenalty = 10000
 \displaywidowpenalty = 10000 % formulas
 
 % Graffiti as in GKP's book "Concrete Mathematics"
@@ -246,8 +246,8 @@
 \renewcommand{\marginpar}[1]{\oldmarginpar%
  [\graffito@setup\raggedleft\hspace{0pt}{#1}]%
  {\graffito@setup\raggedright\hspace{0pt}{#1}}}
-           
-     
+
+
 % Enumeration environment with small caps
 \newenvironment{aenumerate}
     {\def\theenumi{\textsc{\alph{enumi}}}%
@@ -256,7 +256,7 @@
 
 % ********************************************************************
 % Fancy Stuff
-% ********************************************************************  
+% ********************************************************************
 \RequirePackage{booktabs} % for better rules in tables
 \RequirePackage{textcase} % for \MakeTextUppercase
 
@@ -274,17 +274,17 @@
             \DeclareRobustCommand{\spacedallcaps}[1]{\textls[160]{\MakeTextUppercase{#1}}}%
             \DeclareRobustCommand{\spacedlowsmallcaps}[1]{\textls[80]{\scshape\MakeTextLowercase{#1}}}%
         }{%
-            \RequirePackage{soul} % for letterspacing 
+            \RequirePackage{soul} % for letterspacing
                 \sodef\allcapsspacing{\upshape}{0.15em}{0.65em}{0.6em}%
-                \sodef\lowsmallcapsspacing{\scshape}{0.075em}{0.5em}{0.6em}%   
-                \DeclareRobustCommand{\spacedallcaps}[1]{\MakeTextUppercase{\allcapsspacing{#1}}}%   
+                \sodef\lowsmallcapsspacing{\scshape}{0.075em}{0.5em}{0.6em}%
+                \DeclareRobustCommand{\spacedallcaps}[1]{\MakeTextUppercase{\allcapsspacing{#1}}}%
 	            \DeclareRobustCommand{\spacedlowsmallcaps}[1]{\MakeTextLowercase{\textsc{\lowsmallcapsspacing{#1}}}}%
         }%
     }
 
-% ********************************************************************                
+% ********************************************************************
 % headlines
-% ********************************************************************  
+% ********************************************************************
 \PassOptionsToPackage{automark}{scrpage2}
 	\RequirePackage{scrpage2} % provides headers and footers (KOMA Script)
     \clearscrheadings
@@ -292,10 +292,10 @@
     \ifthenelse{\boolean{@nochapters}}%
         {\relax}%
         {\renewcommand{\chaptermark}[1]{\markboth{\spacedlowsmallcaps{#1}}{\spacedlowsmallcaps{#1}}}}
-    \renewcommand{\sectionmark}[1]{\markright{\thesection\enspace\spacedlowsmallcaps{#1}}} 
+    \renewcommand{\sectionmark}[1]{\markright{\thesection\enspace\spacedlowsmallcaps{#1}}}
     \lehead{\mbox{\llap{\small\thepage\kern2em}\headmark\hfil}}
     \rohead{\mbox{\hfil{\headmark}\rlap{\small\kern2em\thepage}}}
-    \renewcommand{\headfont}{\small}  
+    \renewcommand{\headfont}{\small}
     %\DeclareRobustCommand{\fixBothHeadlines}[1]{} % <--- ToDo
     % hack to get the content headlines right (thanks, Lorenzo!)
 		\def\toc@heading{%
@@ -303,19 +303,19 @@
 	 		{\section*{\contentsname}}%nochapters
 	 		{\chapter*{\contentsname}}%chapters
 	 		\@mkboth{\spacedlowsmallcaps{\contentsname}}{\spacedlowsmallcaps{\contentsname}}}
-	 		  
-    
+
+
 % ********************************************************************
 % layout of the chapter-, section-, subsection-, subsubsection-,
 % paragraph and description-headings
-% ********************************************************************             
+% ********************************************************************
 \RequirePackage{titlesec}
 		% parts
 		\ifthenelse{\boolean{@parts}}%
 		{%
 %		\newcommand{\ctparttext}{\relax}
 		\newcommand{\ct@parttext}{\relax} % Thanks to Ivo
-		\newcommand{\ctparttext}[1]{\renewcommand{\ct@parttext}{#1 \relax}} 
+		\newcommand{\ctparttext}[1]{\renewcommand{\ct@parttext}{#1 \relax}}
     \titleformat{\part}[display]
         {\normalfont\centering\large}%
         {\thispagestyle{empty}\partname~\MakeTextUppercase{\thepart}}{1em}%
@@ -324,13 +324,13 @@
     % chapters
     \ifthenelse{\boolean{@linedheaders}}%
     {% lines above and below, number right
-    \titleformat{\chapter}[display]%             
+    \titleformat{\chapter}[display]%
         {\relax}{\raggedleft{\color{halfgray}\chapterNumber\thechapter} \\ }{0pt}%
         {\titlerule\vspace*{.9\baselineskip}\raggedright\spacedallcaps}[\normalsize\vspace*{.8\baselineskip}\titlerule]%
-    }{% something like Bringhurst  
+    }{% something like Bringhurst
     \titleformat{\chapter}[display]%
         {\relax}{\mbox{}\oldmarginpar{\vspace*{-3\baselineskip}\color{halfgray}\chapterNumber\thechapter}}{0pt}%
-        {\raggedright\spacedallcaps}[\normalsize\vspace*{.8\baselineskip}\titlerule]% 
+        {\raggedright\spacedallcaps}[\normalsize\vspace*{.8\baselineskip}\titlerule]%
     }
     % sections \FloatBarrier
     \titleformat{\section}
@@ -340,39 +340,39 @@
         {\relax}{\textsc{\MakeTextLowercase{\thesubsection}}}{1em}{\normalsize\itshape}
     % subsubsections
     \titleformat{\subsubsection}
-        {\relax}{\textsc{\MakeTextLowercase{\thesubsubsection}}}{1em}{\normalsize\itshape}        
+        {\relax}{\textsc{\MakeTextLowercase{\thesubsubsection}}}{1em}{\normalsize\itshape}
     % paragraphs
     \titleformat{\paragraph}[runin]
-        {\normalfont\normalsize}{\theparagraph}{0pt}{\spacedlowsmallcaps}    
+        {\normalfont\normalsize}{\theparagraph}{0pt}{\spacedlowsmallcaps}
     % descriptionlabels
-        \renewcommand{\descriptionlabel}[1]{\hspace*{\labelsep}\spacedlowsmallcaps{#1}}   % spacedlowsmallcaps textit textsc                  
+        \renewcommand{\descriptionlabel}[1]{\hspace*{\labelsep}\spacedlowsmallcaps{#1}}   % spacedlowsmallcaps textit textsc
     % spacing
     \ifthenelse{\boolean{@nochapters}}%
         {\relax}%
         {\titlespacing*{\chapter}{0pt}{1\baselineskip}{1.2\baselineskip}}
-    \titlespacing*{\section}{0pt}{1.25\baselineskip}{1\baselineskip} 
+    \titlespacing*{\section}{0pt}{1.25\baselineskip}{1\baselineskip}
     \titlespacing*{\subsection}{0pt}{1.25\baselineskip}{1\baselineskip}
     \titlespacing*{\paragraph}{0pt}{1\baselineskip}{1\baselineskip}
 
-% ********************************************************************                
+% ********************************************************************
 % layout of the TOC, LOF and LOT (LOL-workaround see next section)
 % ********************************************************************
 \PassOptionsToPackage{titles}{tocloft}
 	\RequirePackage{tocloft}
-    % avoid page numbers being right-aligned in fixed-size box              
+    % avoid page numbers being right-aligned in fixed-size box
     \newlength{\newnumberwidth}
     \settowidth{\newnumberwidth}{999} % yields overfull hbox warnings for pages > 999
     \cftsetpnumwidth{\newnumberwidth}
-    
+
     % have the bib neatly positioned after the rest
-    \newlength{\beforebibskip}  
+    \newlength{\beforebibskip}
     \setlength{\beforebibskip}{0em}
-    
+
     % space for more than nine chapters
     \newlength{\newchnumberwidth}
     \settowidth{\newchnumberwidth}{.} % <--- tweak here if more space required
     \ifthenelse{\boolean{@manychapters}}% <--- many chapters option
-    {%    
+    {%
     	\addtolength{\cftchapnumwidth}{\newchnumberwidth}%
 	    \addtolength{\cftsecnumwidth}{\newchnumberwidth}
 	    \addtolength{\cftsecindent}{\newchnumberwidth}
@@ -380,7 +380,7 @@
 	    \addtolength{\cftsubsecindent}{2\newchnumberwidth}
 	    \addtolength{\cftsubsubsecnumwidth}{\newchnumberwidth}
 	  }{\relax}%
-	  
+
     % pagenumbers right after the titles
     % parts
     \ifthenelse{\boolean{@parts}}%
@@ -394,9 +394,9 @@
       \renewcommand{\cftpartpagefont}{\normalfont}%
       \ifthenelse{\boolean{@dottedtoc}}{\relax}%
       {%
-      	\renewcommand{\cftpartleader}{\hspace{1.5em}}% 
+      	\renewcommand{\cftpartleader}{\hspace{1.5em}}%
       	\renewcommand{\cftpartafterpnum}{\cftparfillskip}%
-      }%        
+      }%
       \setlength{\cftbeforepartskip}{1em}%
       \setlength{\cftbeforechapskip}{.1em}%
       \setlength{\beforebibskip}{\cftbeforepartskip}%
@@ -410,13 +410,13 @@
             \renewcommand{\cftchappagefont}{\normalfont}%
             \ifthenelse{\boolean{@dottedtoc}}{\relax}%
       			{%
-            	\renewcommand{\cftchapleader}{\hspace{1.5em}}% 
-            	\renewcommand{\cftchapafterpnum}{\cftparfillskip}% 
+            	\renewcommand{\cftchapleader}{\hspace{1.5em}}%
+            	\renewcommand{\cftchapafterpnum}{\cftparfillskip}%
             }
-            %\setlength{\cftbeforechapskip}{.1em}%           
+            %\setlength{\cftbeforechapskip}{.1em}%
         }
     % sections
-    \ifthenelse{\boolean{@nochapters}}%        
+    \ifthenelse{\boolean{@nochapters}}%
       {%
           \setlength{\cftbeforesecskip}{.1em}%
           \setlength{\beforebibskip}{1em}%
@@ -426,8 +426,8 @@
     	\renewcommand{\cftsecfont}{\normalfont}%
       \renewcommand{\cftsecpagefont}{\normalfont}%
     	\ifthenelse{\boolean{@dottedtoc}}{\relax}%
-    	{%        
-      	\renewcommand{\cftsecleader}{\hspace{1.5em}}% 
+    	{%
+      	\renewcommand{\cftsecleader}{\hspace{1.5em}}%
       	\renewcommand{\cftsecafterpnum}{\cftparfillskip}%
       }
       \ifthenelse{\boolean{@tocaligned}}{\renewcommand{\cftsecindent}{0em}}{\relax}
@@ -435,26 +435,26 @@
     	\renewcommand{\cftsubsecpresnum}{\scshape\MakeTextLowercase}%
     	\renewcommand{\cftsubsecfont}{\normalfont}%
       \ifthenelse{\boolean{@dottedtoc}}{\relax}%
-      {%      
-      	\renewcommand{\cftsubsecleader}{\hspace{1.5em}}% 
-      	\renewcommand{\cftsubsecafterpnum}{\cftparfillskip}%   
-      }             
+      {%
+      	\renewcommand{\cftsubsecleader}{\hspace{1.5em}}%
+      	\renewcommand{\cftsubsecafterpnum}{\cftparfillskip}%
+      }
       \ifthenelse{\boolean{@tocaligned}}{\renewcommand{\cftsubsecindent}{0em}}{\relax}
     % subsubsections
     	\renewcommand{\cftsubsubsecpresnum}{\scshape\MakeTextLowercase}%
     	\renewcommand{\cftsubsubsecfont}{\normalfont}%
       \ifthenelse{\boolean{@dottedtoc}}{\relax}%
-      {%      
-      	\renewcommand{\cftsubsubsecleader}{\hspace{1.5em}}% 
-      	\renewcommand{\cftsubsubsecafterpnum}{\cftparfillskip}%   
-      }             
+      {%
+      	\renewcommand{\cftsubsubsecleader}{\hspace{1.5em}}%
+      	\renewcommand{\cftsubsubsecafterpnum}{\cftparfillskip}%
+      }
       \ifthenelse{\boolean{@tocaligned}}{\renewcommand{\cftsubsubsecindent}{0em}}{\relax}
-    % figures     
-    	\renewcommand{\cftfigpresnum}{\scshape\MakeTextLowercase}% 
-    	\renewcommand{\cftfigfont}{\normalfont}%                 
+    % figures
+    	\renewcommand{\cftfigpresnum}{\scshape\MakeTextLowercase}%
+    	\renewcommand{\cftfigfont}{\normalfont}%
       \ifthenelse{\boolean{@dottedtoc}}{\relax}%
       {%
-	      \renewcommand{\cftfigleader}{\hspace{1.5em}}% 
+	      \renewcommand{\cftfigleader}{\hspace{1.5em}}%
 	      \renewcommand{\cftfigafterpnum}{\cftparfillskip}%
       }
       \renewcommand{\cftfigpresnum}{\figurename~}%Fig.~}
@@ -467,9 +467,9 @@
     	\renewcommand{\cfttabfont}{\normalfont}%
 			\ifthenelse{\boolean{@dottedtoc}}{\relax}%
       {%
-      	\renewcommand{\cfttableader}{\hspace{1.5em}}% 
-      	\renewcommand{\cfttabafterpnum}{\cftparfillskip}%   
-      } 
+      	\renewcommand{\cfttableader}{\hspace{1.5em}}%
+      	\renewcommand{\cfttabafterpnum}{\cftparfillskip}%
+      }
       \renewcommand{\cfttabpresnum}{\tablename~}%Tab.~}
       \newlength{\tablelabelwidth}
       \settowidth{\tablelabelwidth}{\cfttabpresnum~99}
@@ -477,7 +477,7 @@
       %\cftsetindents{table}{0em}{\tablelabelwidth}
       \cftsetindents{table}{0em}{\figurelabelwidth}
     % listings
-    \ifthenelse{\boolean{@listings}}%        
+    \ifthenelse{\boolean{@listings}}%
     {%
 	    \newlistof{listings}{lol}{\lstlistlistingname}%
 			\renewcommand{\cftlistingspresnum}{\scshape\MakeTextLowercase}%
@@ -485,7 +485,7 @@
 			\renewcommand{\cftlistingspresnum}{\lstlistingname~}%
 			\renewcommand{\cftlistingspagefont}{\normalfont}%
 			\ifthenelse{\boolean{@dottedtoc}}{\relax}%
-      {%  
+      {%
 				\renewcommand{\cftlistingsleader}{\hspace{1.5em}}%
 				\renewcommand{\cftlistingsafterpnum}{\cftparfillskip}%
 			}
@@ -498,8 +498,8 @@
 			\let\lstlistoflistings\listoflistings%
 			}{\relax}%
 
-    % dirty work-around to get the spacing after the toc/lot/lof-titles right    
-    \ifthenelse{\boolean{@parts}}%        
+    % dirty work-around to get the spacing after the toc/lot/lof-titles right
+    \ifthenelse{\boolean{@parts}}%
     {%
     		\AtBeginDocument{\addtocontents{toc}{\protect\vspace{-\cftbeforepartskip}}}
     }{%
@@ -507,7 +507,7 @@
     		{\relax}%
     		{\AtBeginDocument{\addtocontents{toc}{\protect\vspace{-\cftbeforechapskip}}}}
     }
-                                       
+
     % another dirty work-around to get the spaced low small caps into the toc ;-(
     \ifthenelse{\boolean{@nochapters}}%
     {\relax}%
@@ -524,10 +524,10 @@
                  \fi%
          }
     }
-    
+
     % yet another dirty work-around to get the spaced low small caps into the toc ;-(
     \ifthenelse{\boolean{@parts}}%
-    {% 
+    {%
 %% use modified \part (thanks to Hinrich Harms)
 	    	 \let\oldpart=\part%
 	       \renewcommand*{\part}{%
@@ -543,7 +543,7 @@
 									\ctparttext{\relax}%
 	       }%
      }{\relax}
-             
+
     \newcommand{\tocEntry}[1]{% for bib, etc.
     	\ifpdf\texorpdfstring{\spacedlowsmallcaps{#1}}{#1}%
         \else{#1}\fi%
@@ -557,47 +557,47 @@
 %        \AtBeginDocument{%
 %            \addtocontents{lof}{\protect\vspace{-\cftbeforechapskip}}%
 %            \addtocontents{lot}{\protect\vspace{-\cftbeforechapskip}}%
-%            \ifthenelse{\boolean{@listings}}%        
+%            \ifthenelse{\boolean{@listings}}%
 %    				{%
 %             	\addtocontents{lol}{\protect\vspace{-\cftbeforechapskip}}%
 %            }{\relax}%
 %        }%
 %    }{%
-        \DeclareRobustCommand*{\deactivateaddvspace}{\let\addvspace\@gobble}% 
-        \AtBeginDocument{%      
-            \addtocontents{lof}{\deactivateaddvspace}% 
+        \DeclareRobustCommand*{\deactivateaddvspace}{\let\addvspace\@gobble}%
+        \AtBeginDocument{%
+            \addtocontents{lof}{\deactivateaddvspace}%
             \addtocontents{lot}{\deactivateaddvspace}%
-    				\ifthenelse{\boolean{@listings}}% 
+    				\ifthenelse{\boolean{@listings}}%
     				{%
              	\addtocontents{lol}{\deactivateaddvspace}%
-            }{\relax}%                  
+            }{\relax}%
         }%
-%    } 
-   
+%    }
+
 % ********************************************************************
-% footnotes setup   
+% footnotes setup
 % ********************************************************************
 %\RequirePackage{footmisc}  % [bottom] norule para symbol* marginal perpage
     % KOMA-command, footnotemark not superscripted at the bottom
-    \deffootnote{0em}{0em}{\thefootnotemark\hspace*{.5em}}      
-    %\setfnsymbol{bringhurst}   % use symbols recommended by guru Robert Bringhurst 
-    %\setlength{\footnotemargin}{-1em}     
-   
+    \deffootnote{0em}{0em}{\thefootnotemark\hspace*{.5em}}
+    %\setfnsymbol{bringhurst}   % use symbols recommended by guru Robert Bringhurst
+    %\setlength{\footnotemargin}{-1em}
+
 % ********************************************************************
 % Drafting Stuff
 % ********************************************************************
 \RequirePackage{scrtime} % time access
 \newcommand{\finalVersionString}{}
-\ifthenelse{\boolean{@drafting}}{% 
+\ifthenelse{\boolean{@drafting}}{%
 %    \RequirePackage{draftwatermark}%
 %    	\SetWatermarkLightness{0.9}
 %			\SetWatermarkScale{.5}
 %			\SetWatermarkText{\today\ at \thistime}
-		\PassOptionsToPackage{draft}{prelim2e}
-			\RequirePackage{prelim2e}
-       \renewcommand{\PrelimWords}{\relax}
-       \renewcommand{\PrelimText}{\footnotesize[\,\today\ at \thistime\,]}
-}{\renewcommand{\finalVersionString}{\emph{Final Version} as of \today\ at \thistime.}}    
+		%\PassOptionsToPackage{draft}{prelim2e}
+			%\RequirePackage{prelim2e}
+       %\renewcommand{\PrelimWords}{\relax}
+       %\renewcommand{\PrelimText}{\footnotesize[\,\today\ at \thistime\,]}
+}{\renewcommand{\finalVersionString}{\emph{Final Version} as of \today\ at \thistime.}}
 
 % ********************************************************************
 % Caption numbering now w/o chapter number
@@ -621,13 +621,13 @@
         {\relax}{%
             \@removefromreset{figure}{chapter}  % requires remreset package
         }%
-        \renewcommand{\thefigure}{\arabic{figure}}%  
+        \renewcommand{\thefigure}{\arabic{figure}}%
     \makeatother%
 }
 
 % ********************************************************************
 % Backward-compatibility
-% ******************************************************************** 
+% ********************************************************************
 \let\myChapter\chapter
 \let\myPart\part
 \let\graffito\marginpar
