typo in prof's name in acknowledgements.tex

--- a/frontback/acknowledgments.tex
+++ b/frontback/acknowledgments.tex
@@ -14,9 +14,9 @@
 \let\cleardoublepage\relax
 \chapter*{Acknowledgments}
 
-I would like to express my gratitude to my supervisor Prof. Dr. J\"urgen
-Sc\"onw\"alder for providing me constant feedback and support throughout the
-entire duration of my masters thesis.
+I would like to express my gratitude to my supervisor \myProf for providing me
+constant feedback and support throughout the entire duration of my masters
+thesis.
 
 I would also like to thank my mother for her blessings and personal support
 and my brother Dr. Gaurav Bajpai for providing me continuous encouragement and
