no errors and warnings

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -29,7 +29,7 @@
 
 @manual{dell-userguide,
   title={{Dell PowerConnect M6220, M6348, M8024,
-					and M8024‑k Switch User’s Configuration Guide}},
+					and M8024k Switch Users Configuration Guide}},
   organization= {Dell},
   address = {Texas}
 }
